section__3 только шапка

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <title>suka</title>
 </head>
+
 <body>
     <header class="">
         <div class="header flex">
@@ -25,36 +27,69 @@
             </div>
         </div>
     </header>
-<section class="hero">
-    <div class="container">
-        <div class="hero__content flex">
-            <div class="sidebar">
-                <h1 class="title h">Take control <br>of your business success.</h1>
-                <a href="">
-                    <h5 class="get__connected h">Get connected</h5>
-                </a>
-                <h5 class="sub__title h">We are design agency united in keeping creative design
-                    and marketing a straight forward affaire.
-                </h5>
-                <a href="">
-                    <button class="hero__button btn">Services here</button>
-                </a>
-                <a href="">
-                    <button class="hero__button btn">Discover more</button>
-                </a>
-               <div class="hero__slider">
-                <button class="slider btn m"><img class="slider__items l" src="./css/images/to__left.png" alt=""></button>
-                <button class="slider btn"><img class="slider__items r" src="./css/images/to__right.png" alt=""></button>
-               </div>
+    <section class="hero">
+        <div class="container">
+            <div class="hero__content flex">
+                <div class="sidebar">
+                    <h1 class="title h">Take control <br>of your business success.</h1>
+                    <a href="">
+                        <h5 class="get__connected h">Get connected</h5>
+                    </a>
+                    <h5 class="sub__title h">We are design agency united in keeping creative design
+                        and marketing a straight forward affaire.
+                    </h5>
+                    <a href="">
+                        <button class="hero__button btn">Services here</button>
+                    </a>
+                    <a href="">
+                        <button class="hero__button btn">Discover more</button>
+                    </a>
+                    <div class="hero__slider">
+                        <button class="slider btn m"><img class="slider__items l" src="./css/images/to__left.png"
+                                alt=""></button>
+                        <button class="slider btn"><img class="slider__items r" src="./css/images/to__right.png"
+                                alt=""></button>
+                    </div>
+                </div>
+                <div class="hero__img__bloc"><img class="hero__img" src="./css/images/hero__people__img.png" alt="">
+                </div>
             </div>
-            <div class="hero__img__bloc"><img class="hero__img" src="./css/images/hero__people__img.png" alt=""></div>
         </div>
-    </div>
-</section>
-<section class="clients">
-    <div class="container">
-         
-    </div>
-</section>
+    </section>
+    <section class="section__3">
+        <div class="testimonial flex">
+            <img src="./css/images/clients/bubbles.png" alt="" class="bubbles">
+            <div class="testimonial__title">
+                <h4 class="title">We are creative agency, what our clients say about us!</h4>
+                <button class="slider btn m"><img class="slider__items l" src="./css/images/to__left.png"
+                        alt=""></button>
+                <button class="slider btn"><img class="slider__items r" src="./css/images/to__right.png"
+                        alt=""></button>
+            </div>
+            <div class="testing flex">
+                <div class="test box__1">
+                    <img src="./css/images/clients/tester__ikon.png" alt="" class="tester__ikon">
+                    <img src="./css/images/clients/Stars.png" alt="" class="stars">
+                    <h4 class="coments">Ut enim ad minim venia quis nostrud
+                        ex ea commodo consequat dolor repre
+                        enderit in voluptate velit esse dolore
+                        nulla pariatur sint.</h4>
+                    <h4 class="madelir">Madeline Adams</h4>
+                    <h4 class="ux_ui">UI/UX Designer</h4>
+                </div>
+                <div class="test box__2">
+                    <img src="./css/images/clients/tester__ikon.png" alt="" class="tester__ikon">
+                    <img src="./css/images/clients/Stars.png" alt="" class="stars">
+                    <h4 class="coments">Ut enim ad minim venia quis nostrud
+                        ex ea commodo consequat dolor repre
+                        enderit in voluptate velit esse dolore
+                        nulla pariatur sint.</h4>
+                    <h4 class="madelir">Madeline Adams</h4>
+                    <h4 class="ux_ui">UI/UX Designer</h4>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
+
 </html>
