--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         alt=""></button>
             </div>
             <div class="testing flex">
-                <div class="test box__1">
+                <div class="test">
                     <img src="./css/images/clients/tester__ikon.png" alt="" class="tester__ikon">
                     <img src="./css/images/clients/Stars.png" alt="" class="stars">
                     <h4 class="coments">Ut enim ad minim venia quis nostrud
@@ -77,7 +77,7 @@
                     <h4 class="madelir">Madeline Adams</h4>
                     <h4 class="ux_ui">UI/UX Designer</h4>
                 </div>
-                <div class="test box__2">
+                <div class="test">
                     <img src="./css/images/clients/tester__ikon.png" alt="" class="tester__ikon">
                     <img src="./css/images/clients/Stars.png" alt="" class="stars">
                     <h4 class="coments">Ut enim ad minim venia quis nostrud
