поставил картинку на секшн FAQ

--- a/index.html
+++ b/index.html
@@ -89,6 +89,10 @@
                 </div>
             </div>
         </div>
+        <div class="FAQ">
+            <img src="./css/images/clients/FAQ_img.png" alt="" class="faq__img">
+            <div class="FAQ__sidebar"></div>
+        </div>
     </section>
 </body>
 </html>
