--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <div class="services__col">
                     <div class="col__content">
                         <img class="services__icon" src="./img/Icon.png" alt="">
-                        <h2 class="services__text">Digital Marketing</h2>
+                        <h2 class="services__text">Web Analysis</h2>
                         <h4 class="services_text2">Volupta esse cllum doloe <br>
                             nulla pariat secepteur sint <br>
                             esse cllum doloe occaec <br>
@@ -80,7 +80,7 @@
                 <div class="services__col flex">
                     <div class="col__content">
                         <img class="services__icon" src="./img/Icon.png" alt="">
-                        <h2 class="services__text">Digital Marketing</h2>
+                        <h2 class="services__text">Market Analysis</h2>
                         <h4 class="services_text2">Volupta esse cllum doloe <br>
                             nulla pariat secepteur sint <br>
                             esse cllum doloe occaec <br>
@@ -93,7 +93,7 @@
                 <div class="services__col">
                     <div class="col__content">
                         <img class="services__icon" src="./img/Icon.png" alt="">
-                        <h2 class="services__text">Digital Marketing</h2>
+                        <h2 class="services__text">Brand Identity</h2>
                         <h4 class="services_text2">Volupta esse cllum doloe <br>
                             nulla pariat secepteur sint <br>
                             esse cllum doloe occaec <br>
