--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="col-3">
                 <div class="services__col">
                     <div class="col__content">
-                        <img class="services__icon" src="./img/Icon.png" alt="">
+                        <img class="services__icon" src="./img/Icon (1).png" alt="">
                         <h2 class="services__text">Web Analysis</h2>
                         <h4 class="services_text2">Volupta esse cllum doloe <br>
                             nulla pariat secepteur sint <br>
@@ -77,9 +77,9 @@
                 </div>
             </div>
             <div class="col-3">
-                <div class="services__col flex">
+                <div class="services__col">
                     <div class="col__content">
-                        <img class="services__icon" src="./img/Icon.png" alt="">
+                        <img class="services__icon" src="./img/Icon (3).png" alt="">
                         <h2 class="services__text">Market Analysis</h2>
                         <h4 class="services_text2">Volupta esse cllum doloe <br>
                             nulla pariat secepteur sint <br>
