--- a/index.html
+++ b/index.html
@@ -50,57 +50,66 @@
                 <h3 class="services__subtitle">What We Do?</h3>
                 <img class="linie" src="./img/linie.svg" alt="">
             </div>
-            <div class="col-3">
-                <div class="services__col">
-                    <div class="col__content">
-                        <img class="services__icon" src="./img/Icon.png" alt="">
-                        <h2 class="services__text">Digital Marketing</h2>
-                        <h4 class="services_text2">Volupta esse cllum doloe <br>
-                            nulla pariat secepteur sint <br>
-                            esse cllum doloe occaec <br>
-                            officia deserunt.</h4>
-                        <a class="services__text3" href="">Read more <img src="./img/expand-button (4).svg" alt=""> </a>
+            <div class="col-3__content flex">
+                <div class="col-3">
+                    <div class="services__col">
+                        <div class="col__content">
+                            <img class="services__icon" src="./img/Icon.png" alt="">
+                            <h2 class="services__text">Digital Marketing</h2>
+                            <h4 class="services_text2">Volupta esse cllum doloe <br>
+                                nulla pariat secepteur sint <br>
+                                esse cllum doloe occaec <br>
+                                officia deserunt.</h4>
+                            <a class="services__text3" href="">Read more <img src="./img/expand-button (4).svg" alt="">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="services__col">
+                        <div class="col__content">
+                            <img class="services__icon" src="./img/Icon (1).png" alt="">
+                            <h2 class="services__text">Web Analysis</h2>
+                            <h4 class="services_text2">Volupta esse cllum doloe <br>
+                                nulla pariat secepteur sint <br>
+                                esse cllum doloe occaec <br>
+                                officia deserunt.</h4>
+                            <a class="services__text3" href="">Read more <img src="./img/expand-button (4).svg" alt="">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="services__col">
+                        <div class="col__content">
+                            <img class="services__icon" src="./img/Icon (3).png" alt="">
+                            <h2 class="services__text">Market Analysis</h2>
+                            <h4 class="services_text2">Volupta esse cllum doloe <br>
+                                nulla pariat secepteur sint <br>
+                                esse cllum doloe occaec <br>
+                                officia deserunt.</h4>
+                            <a class="services__text3" href="">Read more <img src="./img/expand-button (4).svg" alt="">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="services__col">
+                        <div class="col__content">
+                            <img class="services__icon" src="./img/Icon.png" alt="">
+                            <h2 class="services__text">Brand Identity</h2>
+                            <h4 class="services_text2">Volupta esse cllum doloe <br>
+                                nulla pariat secepteur sint <br>
+                                esse cllum doloe occaec <br>
+                                officia deserunt.</h4>
+                            <a class="services__text3" href="">Read more <img src="./img/expand-button (4).svg" alt="">
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col-3">
-                <div class="services__col">
-                    <div class="col__content">
-                        <img class="services__icon" src="./img/Icon (1).png" alt="">
-                        <h2 class="services__text">Web Analysis</h2>
-                        <h4 class="services_text2">Volupta esse cllum doloe <br>
-                            nulla pariat secepteur sint <br>
-                            esse cllum doloe occaec <br>
-                            officia deserunt.</h4>
-                        <a class="services__text3" href="">Read more <img src="./img/expand-button (4).svg" alt=""> </a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-3">
-                <div class="services__col">
-                    <div class="col__content">
-                        <img class="services__icon" src="./img/Icon (3).png" alt="">
-                        <h2 class="services__text">Market Analysis</h2>
-                        <h4 class="services_text2">Volupta esse cllum doloe <br>
-                            nulla pariat secepteur sint <br>
-                            esse cllum doloe occaec <br>
-                            officia deserunt.</h4>
-                        <a class="services__text3" href="">Read more <img src="./img/expand-button (4).svg" alt=""> </a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-3">
-                <div class="services__col">
-                    <div class="col__content">
-                        <img class="services__icon" src="./img/Icon.png" alt="">
-                        <h2 class="services__text">Brand Identity</h2>
-                        <h4 class="services_text2">Volupta esse cllum doloe <br>
-                            nulla pariat secepteur sint <br>
-                            esse cllum doloe occaec <br>
-                            officia deserunt.</h4>
-                        <a class="services__text3" href="">Read more <img src="./img/expand-button (4).svg" alt=""> </a>
-                    </div>
-                </div>
+            <div class="services__button">
+                <a href="#" class="btn">Other Services</a>
             </div>
         </div>
 
