--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="container">
             <div class="hero__content flex">
                 <div class="sidebar">
-                    <h1 class="title h">Take control <br>of your business success.</h1>
+                    <h1 class="hero__title h">Take control <br>of your business success.</h1>
                     <a href="">
                         <h5 class="get__connected h">Get connected</h5>
                     </a>
@@ -60,7 +60,7 @@
         <div class="testimonial flex">
             <img src="./css/images/clients/bubbles.png" alt="" class="bubbles">
             <div class="testimonial__title">
-                <h4 class="title">We are creative agency, what our clients say about us!</h4>
+                <h4 class="test__title">We are creative agency, what our clients say about us!</h4>
                 <button class="slider btn m"><img class="slider__items l" src="./css/images/to__left.png"
                         alt=""></button>
                 <button class="slider btn"><img class="slider__items r" src="./css/images/to__right.png"
@@ -89,10 +89,116 @@
                 </div>
             </div>
         </div>
-        <div class="FAQ">
-            <img src="./css/images/clients/FAQ_img.png" alt="" class="faq__img">
-            <div class="FAQ__sidebar"></div>
+        <div class="FAQ flex">
+            <div class="sidebar__img">
+                <img src="./css/images/clients/FAQ_img.png" alt="" class="faq__img">
+            </div>
+            <div class="FAQ__sidebar">
+                <ul class="sidebar__items">
+                    <div class="sidebaer__title">
+                        <h4 class="faq__ikon">FAQ</h4>
+                        <h4 class="faq__title">Frequently Asekd Question</h4>
+                        <img src="./css/images/clients/tape.png" alt="" class="faq__line">
+                    </div>
+                    <div class="sidebar__item">
+                        <a href="#01" class="sidebar__item_theme link">01. How much does it cost?</a>
+                        <div id="01" class="sidebar__submenu">
+                            <a href="" class="submenu_link">
+                                Duis aute irure dolor in reprehenderit in voluptate velit
+                                esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+                                non proident sunt deserunt.</a>
+                        </div>
+                    </div>
+                    <div class="sidebar__item">
+                        <a href="#02" class="sidebar__item_theme link">01. How much does it cost?</a>
+                        <div id="02" class="sidebar__submenu">
+                            <a href="" class="submenu_link">Duis aute irure dolor in reprehenderit in voluptate velit
+                                esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+                                non proident sunt deserunt.</a>
+                        </div>
+                    </div>
+                    <div class="sidebar__item">
+                        <a href="#03" class="sidebar__item_theme link">01. How much does it cost?</a>
+                        <div id="03" class="sidebar__submenu">
+                            <a href="" class="submenu_link">Duis aute irure dolor in reprehenderit in voluptate velit
+                                esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+                                non proident sunt deserunt.</a>
+                        </div>
+                    </div>
+                    <div class="sidebar__item">
+                        <a href="#04" class="sidebar__item_theme link">01. How much does it cost?</a>
+                        <div id="04" class="sidebar__submenu">
+                            <a href="" class="submenu_link">Duis aute irure dolor in reprehenderit in voluptate velit
+                                esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+                                non proident sunt deserunt.</a>
+                        </div>
+                    </div>
+                    <div class="sidebar__item">
+                        <a href="#05" class="sidebar__item_theme link">01. How much does it cost?</a>
+                        <div id="05" class="sidebar__submenu">
+                            <a href="" class="submenu_link">Duis aute irure dolor in reprehenderit in voluptate velit
+                                esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+                                non proident sunt deserunt.</a>
+                        </div>
+                    </div>
+                </ul>
+            </div>
         </div>
     </section>
 </body>
+
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- <div class="sidebaer__title">
+    <h4 class="faq__ikon">FAQ</h4>
+    <h4 class="faq__title">Frequently Asekd Question</h4>
+    <img src="./css/images/clients/tape.png" alt="" class="faq__line">
+</div>
+<div class="faq__content">
+    <div class="faq__items">
+        <h4 class="items__theme">01. How much does it cost?</h4>
+        <h5 class="items__text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+            dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+            non proident sunt deserunt.</h5>
+    </div>
+    <div class="faq__items">
+        <h4 class="items__theme">01. How much does it cost?</h4>
+        <h5 class="items__text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+            dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+            non proident sunt deserunt.</h5>
+    </div>
+    <div class="faq__items">
+        <h4 class="items__theme">01. How much does it cost?</h4>
+        <h5 class="items__text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+            dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+            non proident sunt deserunt.</h5>
+    </div>
+    <div class="faq__items">
+        <h4 class="items__theme">01. How much does it cost?</h4>
+        <h5 class="items__text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+            dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+            non proident sunt deserunt.</h5>
+    </div>
+</div> -->
