--- a/index.html
+++ b/index.html
@@ -2,21 +2,72 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HOME</title>
-    <link rel="stylesheet" href="./css/index.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>SUKA</title>
+  <link rel="stylesheet" href="./css/index.css" />
 </head>
 
 <body>
-    <header class="header">
-        <div class="container">
-          <div class="row">
-            <a href="" class="header__logo"> Suka <span class=""> . </span> </a>
-        
+  <section class="trends">
+    <div class="container">
+      <div class="trends__content">
+        <div class="section__header flex">
+          <div class="col-4">
+            <img src="./images/girl.png" alt="">
+          </div>
+          <h3 class="trends__title">Designed to <br> help your team <br> collaborate every <br> thing better.</h3>
+          <button class="btn__cloe">Contact Today</button>
+        </div>
+        <div class="trends__row text-center">
+          <h4 class="text__title">Our Portfolio</h4>
+          <div class="text__sub">Some work for our <br> honorable clients.</div>
+
+
+          <div class="trends__img">
+            <div class="trends__info flex">
+              <div class="trends__row flex ">
+                <!--<p class="trends__name">Digital Marketing</p>
+                 <p class="trends__two">Market Analysis</p>
+                 <p class="trends__three">Volup esse cllum doloe nulla pariat <br> afficia deserunt.</p>
+                 <div class="trends__img">
+                   <p class="trends__name">Digital Marketing</p>
+                   <p class="trends__two">Brand Identity</p>
+                   <p class="trends__three">Volup esse cllum doloe nulla pariat <br> afficia deserunt.</p>
+                   <div class="trends__info">
+                     <p class="trends__name">Digital Marketing</p>
+                     <p class="trends__two">Wed Development</p>
+                     <p class="trends__three">Volup esse cllum doloe nulla pariat <br> afficia deserunt.</p>
+                   </div>
+                 </div>
+               </div>
+             </div>-->
+                <img class="trends__imgone" src="./images/photo.1.png" alt="" />
+                <img class="trends__imgtwo" src="./images/photo.2.png" alt="" />
+                <img class="trends__imgthree" src="./images/photo.3.png" alt="" />
+              </div>
+            </div>
+          </div>
+
+          <div class="trends__team">
+            <div class="trends__general">
+              <h6 class="trends__members">
+                Team Members
+              </h6>
+              <h1 class="trends__our">
+                Meet our team
+              </h1>
+              <img class="trends__imgteam" src="./images/title.png" alt="" />
+            </div>
+          </div>
+          <div class="trends__people">
+            <img class="trends__people" src="./images/people.1.png" alt="" />
+            <img class="trends__people" src="./images/people.2.png" alt="" />
+            <img class="trends__people" src="./images/people.3.png" alt="" />
+            <img class="trends__people" src="./images/people.4.png" alt="" />
           </div>
         </div>
-    </header>
+  </section>
 </body>
 
 </html>
