--- a/index.html
+++ b/index.html
@@ -4,116 +4,78 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Suka Home</title>
+    <title>Suka</title>
     <link href="https://fonts.googleapis.com/css2?family=Karla:wght@700&family=Work+Sans:wght@700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./css/index.css" />
 </head>
 
 <body>
-    <section class="website">
+    <footer class="footer">
         <div class="container">
-            <div class="website__content row">
-                <div class="col-6">
-                    <img src="./img/image here.png" alt="">
-                </div>
-                <div class="col-6">
-                    <h6 class="w-text">Quality is the best</h6>
-                    <h1 class="w-text2">Take a new look in <br>
-                        Your website today.</h1>
-                    <img class="img1" src="./img/linie.svg" alt="">
-                    <p class="w-text3">Duis aute irure dolor in reprehenderit in voluptate velit esse <br>
-                        dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupida <br>
-                        incididunt ut labore et dolore magna.</p>
-                    <div class="customer__content flex">
-                        <div class="customer">
-                            <img class="support" src="./img/icon1.svg" alt="">
-                            <div class="number">5364</div>
-                            <div class="text">Happy Customer</div>
+            <div class="footer__content">
+                <div class="footer__h">
+                    <a href="" class="img__icons">
+                        <img class="partner-icons1" src="./img/partner-icons/1.png" alt="">
+                        <img class="partner-icons2" src="./img/partner-icons/2.png" alt="">
+                        <img class="partner-icons3" src="./img/partner-icons/3.png" alt="">
+                        <img class="partner-icons4" src="./img/partner-icons/4.png" alt="">
+                        <img class="partner-icons5" src="./img/partner-icons/5.png" alt="">
+                        <img class="partner-icons6" src="./img/partner-icons/6.png" alt="">
+                    </a>
+                    <div class="footer__div flex">
+                        <div class="form">
+                            <p class="form1">Join with the entrepreneur <br>
+                                community for business.</p>
+                            <label for="input" class="input">
+                                <input type="text" id="input" class="search__bar" placeholder="suka24@gmail.com" />
+                                <button class="input__button">Join Now
+                                </button>
+                            </label>
+                            <p class="form3">*Subscribe today for update.</p>
                         </div>
-                        <div class="customer__2">
-                            <img class="target" src="./img/icon2.svg" alt="">
-                            <div class="number__1">2387</div>
-                            <div class="text__1">Finished Work</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        </div>
 
-    </section>
-    <section class="services">
-        <div class="container">
-            <div class="services__content">
-                <h6 class="services__title">Services</h6>
-                <h3 class="services__subtitle">What We Do?</h3>
-                <img class="linie" src="./img/linie.svg" alt="">
-            </div>
-            <div class="col-3__content flex">
-                <div class="col-3">
-                    <div class="services__col">
-                        <div class="col__content">
-                            <img class="services__icon" src="./img/Icon.png" alt="">
-                            <h2 class="services__text">Digital Marketing</h2>
-                            <h4 class="services_text2">Volupta esse cllum doloe <br>
-                                nulla pariat secepteur sint <br>
-                                esse cllum doloe occaec <br>
-                                officia deserunt.</h4>
-                            <a class="services__text3" href="">Read more <img src="./img/expand-button (4).svg" alt="">
-                            </a>
+                        <div class="footer-nav-menu flex">
+                            <nav class="footer__nav">
+                                <h5 class="footer__item"> <a class="footer__support" href="">Support</a></h5>
+                                <ul class="footer__menu">
+                                    <li class="footer__item"> <a class="footer__link" href="">FAQ</a></li>
+                                    <li class="footer__item"> <a class="footer__link" href="">Contact Us</a></li>
+                                    <li class="footer__item"> <a class="footer__link" href="">Outlook Plugings</a></li>
+                                    <li class="footer__item"> <a class="footer__link" href="">Live chatting</a></li>
+                                </ul>
+                            </nav>
+                            <nav class="footer__nav2">
+                                <h5 class="footer__item"> <a class="footer__support" href="">Support</a></h5>
+                                <ul class="footer__menu">
+                                    <li class="footer__item2"> <a class="footer__link" href="">FAQ</a></li>
+                                    <li class="footer__item2"> <a class="footer__link" href="">Contact Us</a></li>
+                                    <li class="footer__item2"> <a class="footer__link" href="">Outlook Plugings</a>
+                                    </li>
+                                    <li class="footer__item2"> <a class="footer__link" href="">Live chatting</a></li>
+                                </ul>
+                            </nav>
+                            <nav class="footer__nav3">
+                                <h5 class="footer__item3"> <a class="footer__support" href="">Socia Media</a></h5>
+                                <ul class="footer__menu">
+                                    <a href="" class="social__icon">
+
+                                        <img class="footer__logo" src="./img/facebook-logo.png" alt="">
+                                        <img class="footer__logo2" src="./img/twitter.png" alt="">
+                                        <img class="footer__logo3" src="./img/google-plus.png" alt="">
+                                        <img class="footer__logo4" src="./img/skype-logo.png" alt="">
+                                    </a>
+                                </ul>
+                            </nav>
                         </div>
                     </div>
+
                 </div>
-                <div class="col-3">
-                    <div class="services__col">
-                        <div class="col__content">
-                            <img class="services__icon" src="./img/Icon (1).png" alt="">
-                            <h2 class="services__text">Web Analysis</h2>
-                            <h4 class="services_text2">Volupta esse cllum doloe <br>
-                                nulla pariat secepteur sint <br>
-                                esse cllum doloe occaec <br>
-                                officia deserunt.</h4>
-                            <a class="services__text3" href="">Read more <img src="./img/expand-button (4).svg" alt="">
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-3">
-                    <div class="services__col">
-                        <div class="col__content">
-                            <img class="services__icon" src="./img/Icon (3).png" alt="">
-                            <h2 class="services__text">Market Analysis</h2>
-                            <h4 class="services_text2">Volupta esse cllum doloe <br>
-                                nulla pariat secepteur sint <br>
-                                esse cllum doloe occaec <br>
-                                officia deserunt.</h4>
-                            <a class="services__text3" href="">Read more <img src="./img/expand-button (4).svg" alt="">
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-3">
-                    <div class="services__col">
-                        <div class="col__content">
-                            <img class="services__icon" src="./img/Icon.png" alt="">
-                            <h2 class="services__text">Brand Identity</h2>
-                            <h4 class="services_text2">Volupta esse cllum doloe <br>
-                                nulla pariat secepteur sint <br>
-                                esse cllum doloe occaec <br>
-                                officia deserunt.</h4>
-                            <a class="services__text3" href="">Read more <img src="./img/expand-button (4).svg" alt="">
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="services__button">
-                <a href="#" class="btn">Other Services</a>
             </div>
         </div>
 
-    </section>
+
+    </footer>
 </body>
 
 </html>
